added resource usage
